--- a/ChipScope_TB_envsettings.html
+++ b/ChipScope_TB_envsettings.html
@@ -16,51 +16,51 @@
 <tr>
 <td>LD_LIBRARY_PATH</td>
 <td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>LMC_HOME</td>
 <td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>PATH</td>
 <td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>/data/Xilinx/14.7/ISE_DS/ISE</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
-<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>/data/Xilinx/14.7/ISE_DS/EDK</td>
-<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
-<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
-<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
-<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
-<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
-<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -357,162 +357,6 @@
 <td>0</td>
 </tr>
 </TABLE>
-<A NAME="Translation Property Settings"></A>
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Translation Property Settings </B></TD>
-</tr>
-<tr bgcolor='#ffff99'>
-<td><b>Switch Name</b></td>
-<td><b>Property Name</b></td>
-<td><b>Value</b></td>
-<td><b>Default Value</b></td>
-</tr>
-<tr>
-<td>-intstyle</td>
-<td>&nbsp;</td>
-<td>ise</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-dd</td>
-<td>&nbsp;</td>
-<td>_ngo</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-p</td>
-<td>&nbsp;</td>
-<td>xc6vlx240t-ff1156-2</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-sd</td>
-<td>Macro Search Path</td>
-<td>ipcore_dir</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-uc</td>
-<td>&nbsp;</td>
-<td>otmb2019.ucf</td>
-<td>None</td>
-</tr>
-</TABLE>
-<A NAME="Map Property Settings"></A>
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Map Property Settings </B></TD>
-</tr>
-<tr bgcolor='#ffff99'>
-<td><b>Switch Name</b></td>
-<td><b>Property Name</b></td>
-<td><b>Value</b></td>
-<td><b>Default Value</b></td>
-</tr>
-<tr>
-<td>-ol</td>
-<td>Place & Route Effort Level (Overall)</td>
-<td>std</td>
-<td>high</td>
-</tr>
-<tr>
-<td>-xt</td>
-<td>Extra Cost Tables</td>
-<td>0</td>
-<td>0</td>
-</tr>
-<tr>
-<td>-ir</td>
-<td>Use RLOC Constraints</td>
-<td>OFF</td>
-<td>OFF</td>
-</tr>
-<tr>
-<td>-t</td>
-<td>Starting Placer Cost Table (1-100) Map</td>
-<td>1</td>
-<td>0</td>
-</tr>
-<tr>
-<td>-r</td>
-<td>Register Ordering</td>
-<td>4</td>
-<td>4</td>
-</tr>
-<tr>
-<td>-intstyle</td>
-<td>&nbsp;</td>
-<td>ise</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-lc</td>
-<td>LUT Combining</td>
-<td>off</td>
-<td>off</td>
-</tr>
-<tr>
-<td>-o</td>
-<td>&nbsp;</td>
-<td>ChipScope_TB_map.ncd</td>
-<td>None</td>
-</tr>
-<tr>
-<td>-w</td>
-<td>&nbsp;</td>
-<td>true</td>
-<td>false</td>
-</tr>
-<tr>
-<td>-pr</td>
-<td>Pack I/O Registers/Latches into IOBs</td>
-<td>off</td>
-<td>off</td>
-</tr>
-<tr>
-<td>-p</td>
-<td>&nbsp;</td>
-<td>xc6vlx240t-ff1156-2</td>
-<td>None</td>
-</tr>
-</TABLE>
-<A NAME="Place and Route Property Settings"></A>
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Place and Route Property Settings </B></TD>
-</tr>
-<tr bgcolor='#ffff99'>
-<td><b>Switch Name</b></td>
-<td><b>Property Name</b></td>
-<td><b>Value</b></td>
-<td><b>Default Value</b></td>
-</tr>
-<tr>
-<td>-intstyle</td>
-<td>&nbsp;</td>
-<td>ise</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>-ol</td>
-<td>Place & Route Effort Level (Overall)</td>
-<td>std</td>
-<td>std</td>
-</tr>
-<tr>
-<td>-w</td>
-<td>&nbsp;</td>
-<td>true</td>
-<td>false</td>
-</tr>
-<tr>
-<td>-smartguide</td>
-<td>&nbsp;</td>
-<td>/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB_guide.ncd</td>
-<td>None</td>
-</tr>
-</TABLE>
 <A NAME="Operating System Information"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -528,30 +372,30 @@
 <tr>
 <td>CPU Architecture/Speed</td>
 <td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/1779.328 MHz</td>
-<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/1599.890 MHz</td>
-<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/1599.890 MHz</td>
-<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/4198.078 MHz</td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Host</td>
 <td>cmslab1.physics.tamu.edu</td>
-<td>cmslab1.physics.tamu.edu</td>
-<td>cmslab1.physics.tamu.edu</td>
-<td>cmslab1.physics.tamu.edu</td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>CentOS</td>
-<td>CentOS</td>
-<td>CentOS</td>
-<td>CentOS</td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>CentOS Linux release 7.6.1810 (Core)</td>
-<td>CentOS Linux release 7.6.1810 (Core)</td>
-<td>CentOS Linux release 7.6.1810 (Core)</td>
-<td>CentOS Linux release 7.6.1810 (Core)</td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 </TABLE>
 </BODY> </HTML>
