--- a/ChipScope_TB_summary.html
+++ b/ChipScope_TB_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status (10/21/2024 - 14:45:04)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status (10/21/2024 - 15:37:24)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -19,13 +19,12 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6vlx240t-2ff1156</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/*.xmsgs?&DataKey=Warning'>182 Warnings (2 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -40,7 +39,7 @@ No Errors</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
 <font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.ptwx?&DataKey=ConstraintsData'>2 Failing Constraints</A></TD>
+<A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/Top.ptwx?&DataKey=ConstraintsData'>2 Failing Constraints</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
@@ -49,7 +48,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>177494 &nbsp;<A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>177494 &nbsp;<A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/Top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -495,21 +494,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:41:14 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/xst.xmsgs?&DataKey=Warning'>93 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/xst.xmsgs?&DataKey=Info'>272 Infos (204 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:41:26 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:42:18 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/map.xmsgs?&DataKey=Warning'>18 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:43:17 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/par.xmsgs?&DataKey=Warning'>54 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:41:14 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:41:26 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:42:18 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:43:17 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD>CPLD Fitter Report (Text)</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:43:30 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:45:02 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/bitgen.xmsgs?&DataKey=Warning'>17 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:43:30 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Oct 21 14:45:02 2024</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 14:43:13 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 14:45:04 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/Top.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 15:36:41 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 21 15:37:24 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/21/2024 - 14:45:04</center>
+<br><center><b>Date Generated:</b> 10/21/2024 - 15:37:24</center>
 </BODY></HTML>
