--- a/Top_envsettings.html
+++ b/Top_envsettings.html
@@ -14,46 +14,53 @@
 <td><b>par</b></td>
 </tr>
 <tr>
-<td>PATHEXT</td>
-<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>LD_LIBRARY_PATH</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64/lib:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/lib:<br>/data/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/data/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
 </tr>
 <tr>
-<td>Path</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\VMware\VMware Workstation\bin\;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\MATLAB\R2023b\bin;<br>C:\Program Files\Wolfram Research\WolframScript\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x86)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\Client SDK\ODBC\170\Tools\Binn\;<br>C:\Program Files (x86)\Motorola\MicrosoftSQLServer(x64)\160\DTS\Binn\;<br>C:\Program Files\nodejs\;<br>C:\ProgramData\chocolatey\bin;<br>C:\Program Files\Git\cmd;<br>C:\Program Files\PuTTY\;<br>C:\Program Files\dotnet\;<br>C:\Python312\Scripts\;<br>C:\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Launcher\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\Scripts\;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Python\Python312\;<br>C:\Users\Jerry Xu\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Jerry Xu\AppData\Roaming\npm;<br>C:\Users\Jerry Xu\AppData\Local\Programs\Microsoft VS Code\bin;<br>C:\Users\Jerry Xu\AppData\Local\Muse Hub\lib</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>LMC_HOME</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/smartmodel/lin64/installed_lin64</td>
+</tr>
+<tr>
+<td>PATH</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/data/Xilinx/14.7/ISE_DS/ISE/sysgen/bin:<br>/data/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/data/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/data/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/data/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/local/sbin:<br>/usr/bin:<br>/usr/sbin:<br>/bin:<br>/sbin:<br>/home/cscdev/.local/bin:<br>/home/cscdev/bin</td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE/</td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
-<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
+<td>/data/Xilinx/14.7/ISE_DS/ISE</td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
-<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
+<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
+<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
+<td>/data/Xilinx/14.7/ISE_DS/EDK</td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
-<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
+<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
+<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
+<td>/data/Xilinx/14.7/ISE_DS/PlanAhead</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -106,7 +113,7 @@
 <tr>
 <td>-opt_level</td>
 <td>Optimization Effort</td>
-<td>1</td>
+<td>0</td>
 <td>1</td>
 </tr>
 <tr>
@@ -150,6 +157,12 @@
 <td>Read Cores</td>
 <td>YES</td>
 <td>Yes</td>
+</tr>
+<tr>
+<td>-sd</td>
+<td>Cores Search Directories</td>
+<td>{&quot;ipcore_dir&quot;  }</td>
+<td>&nbsp;</td>
 </tr>
 <tr>
 <td>-write_timing_constraints</td>
@@ -344,6 +357,156 @@
 <td>0</td>
 </tr>
 </TABLE>
+<A NAME="Translation Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Translation Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-dd</td>
+<td>&nbsp;</td>
+<td>_ngo</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc6vlx240t-ff1156-2</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-sd</td>
+<td>Macro Search Path</td>
+<td>ipcore_dir</td>
+<td>None</td>
+</tr>
+</TABLE>
+<A NAME="Map Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Map Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>std</td>
+<td>high</td>
+</tr>
+<tr>
+<td>-xt</td>
+<td>Extra Cost Tables</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>-ir</td>
+<td>Use RLOC Constraints</td>
+<td>OFF</td>
+<td>OFF</td>
+</tr>
+<tr>
+<td>-t</td>
+<td>Starting Placer Cost Table (1-100) Map</td>
+<td>1</td>
+<td>0</td>
+</tr>
+<tr>
+<td>-r</td>
+<td>Register Ordering</td>
+<td>4</td>
+<td>4</td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-lc</td>
+<td>LUT Combining</td>
+<td>off</td>
+<td>off</td>
+</tr>
+<tr>
+<td>-o</td>
+<td>&nbsp;</td>
+<td>Top_map.ncd</td>
+<td>None</td>
+</tr>
+<tr>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
+</tr>
+<tr>
+<td>-pr</td>
+<td>Pack I/O Registers/Latches into IOBs</td>
+<td>off</td>
+<td>off</td>
+</tr>
+<tr>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc6vlx240t-ff1156-2</td>
+<td>None</td>
+</tr>
+</TABLE>
+<A NAME="Place and Route Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Place and Route Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>std</td>
+<td>std</td>
+</tr>
+<tr>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
+</tr>
+<tr>
+<td>-smartguide</td>
+<td>&nbsp;</td>
+<td>/home/cscdev/JerryX/OTMB/OTMB_2013_PRBS_LED/Top_guide.ncd</td>
+<td>None</td>
+</tr>
+</TABLE>
 <A NAME="Operating System Information"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -358,31 +521,31 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Xeon(R) W-2135 CPU @ 3.70GHz/3696 MHz</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/1599.890 MHz</td>
+<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/4062.093 MHz</td>
+<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/3933.281 MHz</td>
+<td>Intel(R) Core(TM) i7-7820X CPU @ 3.60GHz/3570.468 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
-<td>DESKTOP-7PSUJGG</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>cmslab1.physics.tamu.edu</td>
+<td>cmslab1.physics.tamu.edu</td>
+<td>cmslab1.physics.tamu.edu</td>
+<td>cmslab1.physics.tamu.edu</td>
 </tr>
 <tr>
 <td>OS Name</td>
-<td>Microsoft , 64-bit</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>CentOS</td>
+<td>CentOS</td>
+<td>CentOS</td>
+<td>CentOS</td>
 </tr>
 <tr>
 <td>OS Release</td>
-<td>major release  (build 9200)</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td>CentOS Linux release 7.6.1810 (Core)</td>
+<td>CentOS Linux release 7.6.1810 (Core)</td>
+<td>CentOS Linux release 7.6.1810 (Core)</td>
+<td>CentOS Linux release 7.6.1810 (Core)</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
